opam-version: "2.0"
maintainer: "Rizo I. <rizo@odis.io>"
authors: "Rizo I. <rizo@odis.io>"
homepage: "https://github.com/rizo/jx"
bug-reports: "https://github.com/rizo/jx/issues"
synopsis: "Work with JavaScript values from OCaml."

depends: [
  "ocaml"
  "dune" {build}
  "js_of_ocaml-compiler" {build & >= "4.1.0"}

  "ocaml-lsp-server" {with-dev-setup}
  "ocamlformat" {with-dev-setup}
]
